# imhexMCP

./: .flake8  .gitignore  .gitmodules  .mutmut_config.py  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  ENDPOINTS.md  IMPLEMENTATION_SUCCESS.md  IMPROVEMENTS-SUMMARY.md  LICENSE  PERFORMANCE_OPTIMIZATIONS.md  QUICKSTART.md  README.md  STATUS.md  TESTING.md  apply-patches.sh  config.yaml  config.yaml.example  pyproject.toml  pytest.ini  revert-patches.sh  setup-imhex-mcp.sh  verify-setup.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
benchmarks/: README.md  endpoint_benchmarks.py  profile_imhex.py
docs/: API.md  ARCHITECTURE.md  ASYNC_AWAIT_DESIGN.md  BUILD_MCP.md  CHANGELOG.md  COMPRESSION_STRATEGY.md  IMPROVEMENTS.md  (+12 more)
mcp-server/: ARCHITECTURE.md  CLAUDE_CONTEXT.md  CLI_README.md  QUICKSTART.md  README.md  README_MCP_USAGE.md  STATUS-COMPRESSION.md  STATUS-PERFORMANCE.md  __init__.py  benchmark_batching.py  benchmark_caching.py  benchmark_connection_pool.py  benchmark_optimizations.py  benchmark_real_world.py  config.json  demo_enhanced_client.py  dev-requirements.txt  enhanced_client.py  imhex_cli.py  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  server_improved.py  test_async.py  test_async_open.py  test_batch_diff.py  test_batch_diff_auto.py  test_batch_diff_direct.py  test_batch_diff_simple.py  test_batch_operations.py  test_binary_analysis.py  test_caching.py  test_capabilities.py  test_client_compression.py  test_complete.py  test_compression.py  test_compression_pytest.py  test_config_loader.py  (+18 more)
mcp-server/.hypothesis/constants/: 1ff2727d72b4b6a1  6ccb1a27cb397104  c8f00a9f7fd18dd3  dd592f736ef0779c
mcp-server/.hypothesis/examples/04e6b3400353b141/: 3e492669c349fff6  54dcaaf45709a29a
mcp-server/.hypothesis/examples/3e492669c349fff6/: 0aaa083fbecec27d  ce16612d76ad7c9a
mcp-server/examples/: example_patterns.hexpat
mcp-server/tests/: README.md  __init__.py  test_imhex_client.py
(+121 files in other folders)
